day2/netpol-secctx-sa-rbac/01.nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: netpol-pod
  name: netpol-nginx-01
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
  restartPolicy: Always
