day2/netpol-secctx-sa-rbac/03.secctx.solution.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-03
spec:
  securityContext:
    runAsUser: 2000
    runAsGroup: 3000
  containers:
  - name: bb
    image: busybox
    command: ["sh", "-c", "sleep 360000"]
    volumeMounts:
    - name: data
      mountPath: /data
  volumes:
  - name: data
    hostPath:
      path: /mnt/data
